# ezdwg

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/core/: index.html
api/document/: index.html
changelog/: index.html
docs/: changelog.md  index.md  roadmap.md
examples/: convert_to_dxf.py  dimensions.py  raw_insert_2004.py
roadmap/: index.html
search/: search_index.json
src/: api.rs  lib.rs
test_dwg/: mtext_2000.dxf  mtext_2004.dwg  mtext_2004.dxf  polyline2d_old_2004.dwg  text_2000.dxf  text_2004.dwg  text_2004.dxf
tests/: __init__.py  _dxf_helpers.py  test_ac1014_smoke.py  test_ac1024_regression.py  test_ac1027_regression.py  test_ac1032_samples.py  test_attrib_attdef_minsert_document.py  test_block_header_names.py  test_body_document.py  test_cli_inspect_diagnostics.py  test_convert_dxf.py  test_dimension_common.py  test_embedded_text.py  test_face_solid_trace_shape_document.py  test_hatch_leader_document.py  test_long_transaction_document.py  test_oleframe_document.py  test_polyline2d_document.py  test_polyline3d_document.py  test_polyline_mesh_pface_document.py  test_query_present_types.py  test_r2007plus_point_circle_ellipse_regression.py  test_r2007plus_regression.py  test_ray_xline_document.py  test_read_versions.py  test_region_document.py  test_render_colors.py  test_solid3d_document.py  test_text_mtext_regression.py  test_tolerance_mline_document.py  test_viewport_document.py  test_write_dwg.py
(+127 files in other folders)
