[project]
name = "ezdwg"
version = "0.6.0"
description = "Minimal read-only DWG parser (Rust core + Python API)"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
requires-python = ">=3.10"

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dxf = ["ezdxf>=1.4"]

[project.scripts]
ezdwg = "ezdwg:main"

[tool.maturin]
module-name = "ezdwg._core"
python-packages = ["ezdwg"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
]
